add_library(user_io STATIC user_io.cpp)
add_library(utilities STATIC utilities.cpp)
file(GLOB_RECURSE BINS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ejercicio*.cpp)
foreach(binfile ${BINS})
    string(REPLACE ".cpp" "" finalbin ${binfile})
    add_executable(${finalbin} ${binfile})
    target_link_libraries(${finalbin} utilities user_io)
endforeach()
