add_library(user_io SHARED user_io.cpp)
add_library(utilities SHARED utilities.cpp)
file(GLOB_RECURSE BINS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ejercicio*.cpp)
foreach(binfile ${BINS})
    string(REPLACE ".cpp" "" finalbin ${binfile})
    add_executable(${finalbin} ${binfile})
    target_link_libraries(${finalbin} utilities user_io benchmark Threads::Threads)
    add_dependencies(${finalbin} doctest)
#    doctest_discover_test(${finalbin})
endforeach()
