add_library(user_io SHARED user_io.cpp)
file(GLOB_RECURSE BINS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ejercicio*.cpp)
foreach(binfile ${BINS})
    string(REPLACE ".cpp" "" finalbin ${binfile})
    add_executable(${finalbin} ${binfile})
    target_link_libraries(${finalbin} user_io)
    add_dependencies(${finalbin} doctest)
endforeach()
